# some-optimization-problem

./: .gitignore  Cargo.toml
coq/: _CoqProject  convex-hull-trick.opam
coq/theories/: function_segments.v  inf_int.v  intervals.v  lin_func.v  proof.v  utils.v
src/: infint.rs  involved.rs  main.rs  myint.rs  naive.rs  test.rs
